cabal-version: >=1.10
name: GLSimpleGame
version: 0.1.0.0
license-file: LICENSE
maintainer: s.walinder@gmail.com
author: Sebastian Wålinder
build-type: Simple
extra-source-files:
    CHANGELOG.md

executable GLSimpleGame
    main-is: Main.hs
    other-modules:
        Input,
        Level,
        Types,
        Render.SDL.Render

    hs-source-dirs: src
    default-language: Haskell2010
    -- ghc-options: -Weverything -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-implicit-prelude -Wmissing-home-modules -Widentities -Wredundant-constraints -Wpartial-fields -Wno-missing-exported-signatures -Wno-missing-export-lists -Wno-missing-import-lists -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wmonomorphism-restriction -Wall-missed-specialisations -Wcpp-undef -Wno-missing-signatures
    ghc-options: -w -Wmissing-home-modules
    build-depends:
                  base >=0
                , extra
                , lens
                , linear

                , sdl2
                , sdl2-image
                , sdl2-ttf
                -- SDL TFF dependency
                , text

                , bearriver
                , template-haskell
                , FRPEngine == 0.2.*

                , aeson